--- a/src/style.css
+++ b/src/style.css
@@ -29,17 +29,16 @@ body {
     position: relative;
   }
   
-  .pointer.left {
-    width: 0;
-    height: 0;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    border-left: 28px solid #DAA520; /* dourado tribal */
+  .img-pointer {
     position: absolute;
-    left: -14px;
-    top: 136px;
-    z-index: 2;
-    filter: drop-shadow(0 0 4px #000);
+    left: -85px; /* Ajuste para cruzar a borda */
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100px;
+    height: auto;
+    z-index: 10;
+    pointer-events: none;
+    filter: drop-shadow(0 0 5px #000);
   }
   
 
